# django-taxonomy

./: LICENSE  README.md  READMEB.md  TODO  __init__.py  admin.py  admins.py  api.py  facade.py  forms.py  inline_templates.py  models.py  pyproject.toml  taxonomies.py  taxonomy.py  views.py
migrations/: 0001_initial.py  0002_auto_20201002_0117.py  0003_remove_term_depth.py
taxonomy/: READMEB.md  TODO  __init__.py  admin.py  admins.py  api.py  forms.py  inline_templates.py  models.py
taxonomy/templates/taxonomy/: term_detail.html
taxonomy/templatetags/: taxonomy_displays.py
taxonomy/tests/: model.py
taxonomy/ttest/: apps.py  models.py
taxonomy/ttest/migrations/: 0001_initial.py
taxonomy/ttest/tests/: test_api.py  test_models.py  utils.py
templates/taxonomy/: term_change_form.html  term_change_list.html
templatetags/: taxonomy_displays.py
tests/: test_api.py  test_managers.py  test_models.py  utils.py
