[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "taxonomy"
#version = "0.1.0"
dist-name = "django-taxonomy2"
author = "robert crowther"
author-email = "rw.crowther@gmail.com"
home-page = "https://github.com/rcrowther/django-taxonomy"
description-file = "README.md"
classifiers=[
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Framework :: Django"
]
